<?xml version="1.0"?>
<package format="2">
  <name>actkin_stabilizer_choreonoid_sample</name>
  <version>0.0.0</version>
  <description>The actkin_stabilizer_choreonoid_sample package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <author email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actkin_stabilizer</depend>
  <depend>actkin_stabilizer_ros_bridge</depend>
  <depend>hrpsys_choreonoid_tutorials</depend>
  <depend>vnoid_world</depend>
  <depend>collision_checker_rtc</depend>
</package>
