<?xml version="1.0"?>
<package format="2">
  <name>actkin_stabilizer_choreonoid_sample</name>
  <version>0.0.0</version>
  <description>The actkin_stabilizer_choreonoid_sample package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <author email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>openrtm_tools</depend>
  <depend>choreonoid</depend>
  <depend>choreonoid_bridge_shm</depend>
  <depend>choreonoid_ros_ext_plugin</depend>
  <depend>rtcloader</depend>
  <depend>hrpsys_trans_bridge</depend>
  <depend>execution_context_shmtime</depend>
  <depend>hrpsys_choreonoid_tutorials</depend>
  <depend>jvrc_models</depend>

  <depend>actkin_stabilizer</depend>
  <depend>collision_checker_rtc</depend>
</package>
